# cv-platform-services

./: .gitignore  Dockerfile  README.md  pyproject.toml
feature/: __init__.py  base_model_onnx.py  convert_to_onnx.py  export_feature_onnx.py  feature_model.py  feature_service.py  logger.py  main.py  middleware.py  utils.py
